# my-virtual-assistant

./: README.md  action_utils.py  main.py  pyproject.toml  recording.py  requirements.txt  response_utils.py  speech_utils.py  tts_transformer.py
my_virtual_assistant/: __init__.py  main.py  recording.py  response_utils.py  speech_utils.py
