[project]
name = "my-virtual-assistant"
version = "0.1.0"
description = "A simple virtual assistant application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "pyjokes>=0.8.3",
    "soundfile>=0.13.1",
    "speechrecognition>=3.14.3",
    "transformers>=4.53.2",
    "wikipedia>=1.4.0",
]

[project.scripts]
my-assistant = "my_virtual_assistant.main:main"
